# green-sm-nyc-mobility-intelligence

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
dashboard/: README.md  app.js  index.html  styles.css
dashboard/data/: fares.json  market.json  metadata.json  summary.json  zones.json
data/: README.md
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/marts/: _marts__models.yml
dbt/models/marts/analytics/: mart_fare_positioning.sql  mart_hourly_demand.sql  (+3 more)
dbt/models/staging/: _sources.yml  _staging__models.yml  stg_tlc__fhvhv_trips.sql  stg_tlc__pipeline_metadata.sql  stg_tlc__taxi_zones.sql  stg_tlc__yellow_trips.sql
dbt/tests/: assert_fact_preserves_conformed_trip_count.sql  assert_market_fare_components_reconcile.sql  assert_market_shares_sum_to_one.sql  assert_opportunity_scores_are_bounded.sql  assert_weighted_fare_metrics_are_non_negative.sql
docs/: ARCHITECTURE.md  BRD.md  DATA_MODEL.md  DATA_SOURCES.md  METRICS.md  MILESTONES.md  PUBLISHING.md  REAL_DATA_VALIDATION.md  REVIEW.md  RUNBOOK.md
docs/adr/: 0001-local-analytics-stack.md  0002-static-javascript-dashboard.md  0003-observed-facts-not-supply.md
scripts/: clean.py  run_pipeline.py
src/green_sm_nyc/: __init__.py  cli.py  config.py  dashboard_export.py  sample_data.py  tlc.py  warehouse.py
tests/: test_dashboard_contract.py  test_dashboard_static.py  test_sample_data.py  test_tlc.py  test_warehouse.py  test_warehouse_relation_types.py
(+4 files in other folders)
